--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PT'
 - !lcsh 'Danish fiction'
+- GITenberg
 title: 'Judith Fürste: En Fortælling'
 url: http://www.gutenberg.org/ebooks/39510
